--- a/androidDownloadTest/res/layout/activity_main.xml
+++ b/androidDownloadTest/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
     
     <Button 
         android:id="@+id/test"
+        android:text="测试下载"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
